substrate/frame/support/test/tests/pallet_ui/call_invalid_origin_type.stderr
error: Invalid type: expected `OriginFor<T>`
  --> tests/pallet_ui/call_invalid_origin_type.rs:34:22
   |
34 |         pub fn foo(origin: u8) {}
   |                            ^^
